# hexlet-flask-1

./: .gitignore  Makefile  pyproject.toml
hexlet_flask/: example.py  hello.py
tests/: test_flask_first_project.py
